--- a/genre_prediction.ipynb
+++ b/genre_prediction.ipynb
@@ -1660,10 +1660,32 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "0b931920",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred = ensemble_model.predict(x_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "547941cd-cd04-4ab7-a4f7-77606dcc2bcc",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.metrics import accuracy_score, f1_score, precision_score\n",
+    "\n",
+    "# Calculate metrics\n",
+    "accuracy = accuracy_score(y_train, y_pred)\n",
+    "f1 = f1_score(y_train, y_pred, average='weighted')  # 'weighted' for class imbalance\n",
+    "precision = precision_score(y_train, y_pred, average='weighted')  # 'weighted' for class imbalance\n",
+    "\n",
+    "# Print results\n",
+    "print(f\"Accuracy: {accuracy:.2f}\")\n",
+    "print(f\"F1-Score: {f1:.2f}\")\n",
+    "print(f\"Precision: {precision:.2f}\")\n"
+   ]
   }
  ],
  "metadata": {
