--- a/genre_prediction.ipynb
+++ b/genre_prediction.ipynb
@@ -1677,9 +1677,9 @@
     "from sklearn.metrics import accuracy_score, f1_score, precision_score\n",
     "\n",
     "# Calculate metrics\n",
-    "accuracy = accuracy_score(y_train, y_pred)\n",
-    "f1 = f1_score(y_train, y_pred, average='weighted')  # 'weighted' for class imbalance\n",
-    "precision = precision_score(y_train, y_pred, average='weighted')  # 'weighted' for class imbalance\n",
+    "accuracy = accuracy_score(y_test, y_pred)\n",
+    "f1 = f1_score(y_test, y_pred, average='weighted')  # 'weighted' for class imbalance\n",
+    "precision = precision_score(y_test, y_pred, average='weighted')  # 'weighted' for class imbalance\n",
     "\n",
     "# Print results\n",
     "print(f\"Accuracy: {accuracy:.2f}\")\n",
